added endpoint refresh
